[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/dialogic/Images/Tutorials/arrow-down.svg" type="Texture" id=13]
[ext_resource path="res://addons/dialogic/Editor/TimelineEditor/TimelineEditor.gd" type="Script" id=17]
[ext_resource path="res://addons/dialogic/Editor/Common/TLabel.tscn" type="PackedScene" id=21]
[ext_resource path="res://addons/dialogic/Editor/TimelineEditor/TimelineArea.gd" type="Script" id=22]
[ext_resource path="res://addons/dialogic/Editor/Theme/MainTheme.tres" type="Theme" id=28]
[ext_resource path="res://addons/dialogic/Editor/TimelineEditor/FlexContainer.gd" type="Script" id=29]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_right = 6.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.94902, 1, 0.482353, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TimelineEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )

[node name="Toolbar" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 22.0

[node name="TLabel" parent="Toolbar" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 111.0
margin_bottom = 18.0
text = "Current Timeline:"
text_key = "Current Timeline:"

[node name="Label" type="Label" parent="Toolbar"]
margin_left = 115.0
margin_top = 4.0
margin_right = 149.0
margin_bottom = 18.0
text = "None"

[node name="ToolButton" type="ToolButton" parent="Toolbar"]
margin_left = 153.0
margin_right = 253.0
margin_bottom = 22.0
text = "New Timeline"

[node name="View" type="HSplitContainer" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 28 )
split_offset = 7

[node name="TimelineArea" type="ScrollContainer" parent="View"]
margin_right = 832.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLine" type="VBoxContainer" parent="View/TimelineArea"]
margin_left = 5.0
margin_top = 5.0
margin_right = 827.0
margin_bottom = 569.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="View"]
margin_left = 844.0
margin_right = 1024.0
margin_bottom = 574.0
rect_min_size = Vector2( 180, 0 )
custom_styles/bg = SubResource( 2 )

[node name="EventContainer" type="VBoxContainer" parent="View/ScrollContainer"]
margin_left = 2.0
margin_right = 180.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventsWarning" type="PanelContainer" parent="View/ScrollContainer/EventContainer"]
margin_right = 178.0
margin_bottom = 68.0
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="View/ScrollContainer/EventContainer/EventsWarning"]
margin_top = 10.0
margin_right = 172.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="View/ScrollContainer/EventContainer/EventsWarning/HBoxContainer"]
margin_right = 40.0
margin_bottom = 48.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 13 )
stretch_mode = 4

[node name="Label" type="Label" parent="View/ScrollContainer/EventContainer/EventsWarning/HBoxContainer"]
margin_left = 44.0
margin_right = 172.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add an event to start building your timeline"
autowrap = true

[node name="HBoxContainer6" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 77.0
margin_right = 178.0
margin_bottom = 91.0

[node name="TLabel" parent="View/ScrollContainer/EventContainer/HBoxContainer6" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 77.0
margin_bottom = 14.0
text = "Main Events"
text_key = "Main Events"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer6"]
margin_left = 81.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FlexContainer1" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 100.0
margin_right = 178.0
margin_bottom = 100.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="HBoxContainer5" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 109.0
margin_right = 178.0
margin_bottom = 123.0

[node name="TLabel2" parent="View/ScrollContainer/EventContainer/HBoxContainer5" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 33.0
margin_bottom = 14.0
text = "Logic"
text_key = "Logic"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer5"]
margin_left = 37.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FlexContainer2" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 132.0
margin_right = 178.0
margin_bottom = 132.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="HBoxContainer3" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 141.0
margin_right = 178.0
margin_bottom = 155.0

[node name="TLabel3" parent="View/ScrollContainer/EventContainer/HBoxContainer3" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 14.0
text = "Timeline"
text_key = "Timeline"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer3"]
margin_left = 60.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FlexContainer3" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 164.0
margin_right = 178.0
margin_bottom = 164.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="HBoxContainer4" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 173.0
margin_right = 178.0
margin_bottom = 187.0

[node name="TLabel4" parent="View/ScrollContainer/EventContainer/HBoxContainer4" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 37.0
margin_bottom = 14.0
text = "Audio"
text_key = "Audio"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer4"]
margin_left = 41.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FlexContainer4" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 196.0
margin_right = 178.0
margin_bottom = 196.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="HBoxContainer" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 205.0
margin_right = 178.0
margin_bottom = 219.0

[node name="TLabel5" parent="View/ScrollContainer/EventContainer/HBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 39.0
margin_bottom = 14.0
text = "Godot"
text_key = "Godot"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FlexContainer5" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 228.0
margin_right = 178.0
margin_bottom = 228.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="CustomEventsHeadline" type="HBoxContainer" parent="View/ScrollContainer/EventContainer"]
margin_top = 237.0
margin_right = 178.0
margin_bottom = 251.0

[node name="TLabel6" parent="View/ScrollContainer/EventContainer/CustomEventsHeadline" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 95.0
margin_bottom = 14.0
text = "Custom Events"
text_key = "Custom Events"

[node name="HSeparator2" type="HSeparator" parent="View/ScrollContainer/EventContainer/CustomEventsHeadline"]
margin_left = 99.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="CustomEventsContainer" type="Container" parent="View/ScrollContainer/EventContainer"]
margin_top = 260.0
margin_right = 178.0
margin_bottom = 260.0
size_flags_horizontal = 3
script = ExtResource( 29 )

[node name="Spacer" type="Control" parent="View/ScrollContainer/EventContainer"]
margin_top = 269.0
margin_right = 178.0
margin_bottom = 369.0
rect_min_size = Vector2( 0, 100 )
